# JARVIS

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Jarvis/: __init__.py  config.py
Jarvis/api/: api.py
Jarvis/api/endpoints/: auth_gmail.py  chat.py  email_generation.py
Jarvis/api/endpoints/utils/: credentials.py
Jarvis/objective/: credentials.json  memory.py  objective.py  token.json
Jarvis/orchestrator/: orchestrator.py
Jarvis/subjective/: inferenza.py  subjectiveModule.py
Jarvis/subjective/data/: data_generation.py
Jarvis/subjective/finetuning/: README.md  tuning.py
Jarvis/utils/: Ollama.py  convert_finetuned.py  excel_to_json.py  prompt.py
docs/: mkdocs.yml
docs/docs/: index.md
