[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Jarvis"
version = "0.0.1"
description = "JARVIS is an advanced digital agent project based on LLMs (Large Language Models) with a strong focus on adaptive personalization. The goal is to create a system that continuously learns from user input and feedback, improving interaction quality and offering a tailored experience. Through memory modules and fine-tuning techniques, the agent can adapt in real time to the user's preferences and style."
authors = [
  { name = "Francesco Manco , Domenico Roberto , Marco Polignano , Giovanni Semeraro" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.5"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["Jarvis"]
force_sort_within_sections = true
